Simple fixes: Updated detail to center the image grid better Fixed the github link on the about page Cropped the 'Lift.jpg' image to match other ratios

--- a/src/components/css/detail.css
+++ b/src/components/css/detail.css
@@ -53,7 +53,7 @@ body {
 }
 
 .detailImage {
-  width: 68vw;
+  max-width: 68vw;
   /* background: darkcyan; */
   display: flex;
   align-items: center;
@@ -82,6 +82,7 @@ body {
 .detailText {
   font-size: 0.8vw;
   margin: 1vw 0;
+  max-width: 68vw;
 }
 
 .detailLink {
@@ -118,7 +119,7 @@ body {
 }
 
 .imageGridContainer {
-  width: 68vw;
+  max-width: 66vw;
   display: flex;
   align-items: center;
   justify-content: left;
@@ -128,8 +129,8 @@ body {
 }
 
 .imageGridItem {
-  max-width: 31vw;
-  margin: 1vw;
+  width: calc(68vw / 3);
+  margin-bottom: 3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,7 +139,7 @@ body {
 
 .imageGridIMG {
   max-width: 31vw;
-  max-height: 40vh;
+  max-height: 60vh;
   width: auto;
   height: auto;
 }
